cabal-version: >=1.9.2
name: hsimport
version: 0.8.8
license: BSD3
license-file: LICENSE
maintainer: daniel.trstenjak@gmail.com
author: Daniel Trstenjak
tested-with: ghc ==7.6.2 ghc ==7.6.3 ghc ==7.8.3 ghc ==7.10.1
             ghc ==7.10.2 ghc ==8.0.1 ghc ==8.2.1 ghc ==8.4.2 ghc ==8.6.3
synopsis: A command line program for extending the import list of a Haskell source file.
description:
    A command line program for extending the import list of a Haskell source file.
category: Utils, Development
build-type: Simple
extra-source-files:
    README.md
    CHANGELOG
    tests/inputFiles/*.hs
    tests/goldenFiles/*.hs
    tests/outputFiles/.gitignore

source-repository head
    type: git
    location: https://github.com/dan-t/hsimport

library
    exposed-modules:
        HsImport
        HsImport.Main
        HsImport.Config
        HsImport.Args
        HsImport.ImportPos
    cpp-options: -DCABAL
    hs-source-dirs: lib
    other-modules:
        HsImport.ImportSpec
        HsImport.Module
        HsImport.Symbol
        HsImport.ImportChange
        HsImport.Parse
        HsImport.PrettyPrint
        HsImport.Utils
        Paths_hsimport
    ghc-options: -W
    build-depends:
        base >=3 && <5,
        cmdargs >=0.10.5 && <0.11,
        haskell-src-exts >=1.18.0 && <1.22,
        ilist >=0.1 && <0.4,
        microlens ==0.4.*,
        mtl >=2.1.2 && <2.3,
        text >=0.11.3.1 && <1.3,
        split >=0.2.2 && <0.3,
        attoparsec >=0.10.4.0 && <0.14,
        directory >=1.2.0.1 && <1.4,
        dyre ==0.8.*

executable hsimport
    main-is: Main.hs
    cpp-options: -DCABAL
    hs-source-dirs: exe
    ghc-options: -W
    ghc-prof-options: -fprof-auto -rtsopts
    build-depends:
        base >=3 && <5,
        hsimport -any

test-suite hsimport-tests
    type: exitcode-stdio-1.0
    main-is: Main.hs
    hs-source-dirs: tests
    ghc-options: -W
    build-depends:
        base >=3 && <5,
        tasty >=0.9.0.1 && <1.2,
        tasty-golden >=2.2.0.1 && <2.4,
        filepath >=1.3.0.1 && <1.5,
        haskell-src-exts >=1.18.0 && <1.22,
        hsimport -any
